versioned_docs/version-1.5.0/user-documentation/5-crawler/configure-database.md
---
id: crawler-configure-connection
title: Configure a connection to an external database
slug: /user-guide/crawler/configure-connection/
---

_Pour configurer une connexion à une base de données externe, veuillez suivre les étapes suivantes._

- Depuis ***Add data*** et la carte ***Crawling***, cliquez sur ***Configure connection to external databases*** puis sur ***Add***.

<div align="center">
    <img src="/images/user-documentation/v1.4/5-crawler/crawler-connections.png" alt="database" width="800"/> 
</div>

- Donnez le nom de la connexion, sélectionnez un plugin de connexion à une base de données selon votre type de base. Entrez un utilisateur, son mot de passe, une adresse d’accès à une base de données, son port et son nom.

<div align="center">
    <img src="/images/user-documentation/v1.4/5-crawler/crawler-add-connection.png" alt="database" width="800"/> 
</div>

- Cliquez sur ***Save***
- Testez ensuite la connexion en appuyant sur le bouton ***play***, un message s’affiche pour indiquer que la connexion est fonctionnelle.

<div align="center">
    <img src="/images/user-documentation/v1.4/5-crawler/crawler-connected.png" alt="connected" width="800"/> 
</div>

- Appuyez sur ***Previous*** pour revenir à la carte ***Crawling***

Vous pouvez désormais [ajouter des éléments au catalogue depuis cette nouvelle source de données](../configure-datasources/external-databases/)
